--- a/css/body.css
+++ b/css/body.css
@@ -8,7 +8,9 @@ html {
 
 .body {
     font-family: 'Lato', sans-serif;
-    background-color: rgb(240, 240, 231);
+    background-color: hsl(60, 25%, 85%);
+    color: hsl(60, 25%, 10%);
     line-height: 1.5;
-    min-height: 100vh;
+    max-width: 900px;
+    margin: 0 auto;
 }
