--- a/css/section.css
+++ b/css/section.css
@@ -24,6 +24,12 @@
     grid-gap: 20px;
 }
 
+@media (max-width: 767px) {
+    .form {
+        grid-template-columns: auto;
+    }
+}
+
 .form__button {
     border: none;
     background-color: hsl(180, 100%, 25%);
