--- a/css/section.css
+++ b/css/section.css
@@ -40,6 +40,13 @@
 
 .form__button:hover {
     background-color: hsl(180, 100%, 30%);
+    transform: scale(1.1);
+}
+
+@media (max-width: 767px) {
+    .form__button:hover {
+        transform: scaleX(1.03) scaleY(1.1);
+    }
 }
 
 .form__button:active {
